@@ -14,6 +14,7 @@ __docformat__ = 'reStructuredText'
 import sys
 import os
 import os.path
+import codecs
 import docutils
 from docutils import frontend, nodes, utils, writers
 from docutils.writers import html4css1
@@ -35,13 +36,11 @@ class Writer(html4css1.Writer):
 
     settings_spec = html4css1.Writer.settings_spec + (
         'PEP/HTML-Specific Options',
-        'The default value for the --stylesheet-path option (defined in '
-        'HTML-Specific Options above) is "%s" for the PEP/HTML writer.'
-        % default_stylesheet_path,
-        (('Specify a template file.  Default is "%s".' % default_template_path,
-          ['--template'],
-          {'default': default_template_path, 'metavar': '<file>'}),
-         ('Python\'s home URL.  Default is "http://www.python.org".',
+        'For the PEP/HTML writer, the default value for the --stylesheet-path '
+        'option is "%s", and the default value for --template is "%s". '
+        'See HTML-Specific Options above.'
+        % (default_stylesheet_path, default_template_path),
+        (('Python\'s home URL.  Default is "http://www.python.org".',
           ['--python-home'],
           {'default': 'http://www.python.org', 'metavar': '<URL>'}),
          ('Home URL prefix for PEPs.  Default is "." (current directory).',
@@ -52,7 +51,8 @@ class Writer(html4css1.Writer):
           ['--no-random'],
           {'action': 'store_true', 'validator': frontend.validate_boolean}),))
 
-    settings_default_overrides = {'stylesheet_path': default_stylesheet_path}
+    settings_default_overrides = {'stylesheet_path': default_stylesheet_path,
+                                  'template': default_template_path,}
 
     relative_path_settings = (html4css1.Writer.relative_path_settings
                               + ('template',))
@@ -64,15 +64,9 @@ class Writer(html4css1.Writer):
         html4css1.Writer.__init__(self)
         self.translator_class = HTMLTranslator
 
-    def translate(self):
-        html4css1.Writer.translate(self)
+    def interpolation_dict(self):
+        subs = html4css1.Writer.interpolation_dict(self)
         settings = self.document.settings
-        template = open(settings.template).read()
-        # Substitutions dict for template:
-        subs = {}
-        subs['encoding'] = settings.output_encoding
-        subs['version'] = docutils.__version__
-        subs['stylesheet'] = ''.join(self.stylesheet)
         pyhome = settings.python_home
         subs['pyhome'] = pyhome
         subs['pephome'] = settings.pep_home
@@ -97,8 +91,7 @@ class Writer(html4css1.Writer):
         subs['title'] = self.title
         subs['body'] = ''.join(
             self.body_pre_docinfo + self.docinfo + self.body)
-        subs['body_suffix'] = ''.join(self.body_suffix)
-        self.output = template % subs
+        return subs
 
     def assemble_parts(self):
         html4css1.Writer.assemble_parts(self)
