@@ -9,6 +9,8 @@
 </head>
 <body>
 <div class="document">
+
+
 <ul class="simple">
 <li>This is an ordinary simple bullet list.</li>
 <li>It should be made compact (&lt;p&gt; &amp; &lt;/p&gt; tags omitted).</li>
